--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -67,7 +67,7 @@
                 <ul class="sub-menu">
 
                     <li ui-sref-active="active"><a ui-sref="app.sello.todos">Sellos</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.sello.crear">Sellos Asignar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.sello.crear">Sellos Ingreso</a></li>
                 </ul>
             </li>
             <li class="has-sub" ng-class="{active:$state.includes('app.despacho')}">
