--- a/views/sello_crear.html
+++ b/views/sello_crear.html
@@ -2,12 +2,12 @@
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
-        <li><a href="javascript:;">Control</a></li>
+        <li><a href="javascript:;">Sellos</a></li>
         <li class="active">Ingreso</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Control de Ingreso <small>Gestión del Control</small></h1>
+    <h1 class="page-header">Ingreso de Sellos <small>Gestión del Despachos</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -31,6 +31,10 @@
                             <label class="col-md-3 control-label">Patente</label>
                             <div class="col-md-3">
                                 <input type="text" class="form-control" placeholder="BBBB-01" ng-model="monet_id"  />
+                            </div>
+                            <label class="col-md-2 control-label">Numero Sello</label>
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" placeholder="23455" ng-model="monet_id"  />
                             </div>
                         </div>
 
@@ -70,9 +74,30 @@
                         </tr>
                         </tbody>
                     </table>
+                    <table id="data-table2" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Numero Despacho</th>
+                            <th>Patente</th>
+                            <th>Sello</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td>200012</td>
+                            <td>HVCV-80</td>
+                            <td>199923</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td>200012</td>
+                            <td>HVCV-80</td>
+                            <td>199924</td>
+                        </tr>
+                        </tbody>
+                    </table>
                     <div class="alert alert-success fade in m-b-5">
                         <strong>
-                            La Vereficacion de Documentos fue Exitosa
+                            El Ingreso de sello ha sido Exitoso!
                         </strong>
                         , Vehiculo Habilitado para Despacho
                     </div>
