--- a/views/control_ingreso.html
+++ b/views/control_ingreso.html
@@ -40,6 +40,9 @@
                             <div class="col-md-9">
                                 <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Hacer Ingreso</button>
                             </div>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-info" ng-click="verificarMoneda_Tipo()">Cancelar</button>
+                            </div>
                         </div>
                     </form>
                 </div>
