--- a/views/control_salida.html
+++ b/views/control_salida.html
@@ -34,11 +34,19 @@
                             </div>
                         </div>
 
-
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">RUN</label>
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" placeholder="10259635" ng-model="monet_id"  />
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-9">
                                 <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Hacer Salida</button>
+                            </div>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-info" ng-click="verificarMoneda_Tipo()">Cancelar</button>
                             </div>
                         </div>
                     </form>
