--- a/views/despacho_anular.html
+++ b/views/despacho_anular.html
@@ -118,7 +118,7 @@
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14222</a></td>
+                            <td><a href="carga_todos.html">214222</a></td>
                             <td>FBKK-15</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
@@ -127,8 +127,8 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14222</a></td>
-                            <td>125413</td>
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>BBBC-25</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>41 TALCA</td>
                             <td>12/12/16 15:01:14-Z</td>
@@ -136,8 +136,8 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14223</a></td>
-                            <td>125414</td>
+                            <td><a href="carga_todos.html">214223</a></td>
+                            <td>HHBC-29</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>14 ANTOFAGASTA</td>
                             <td>12/12/16 15:11:46-Z</td>
@@ -145,8 +145,8 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14223</a></td>
-                            <td>125415</td>
+                            <td><a href="carga_todos.html">214223</a></td>
+                            <td>CGFC-15</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>15 CALAMA</td>
                             <td>12/12/16 15:14:59-Z</td>
@@ -154,8 +154,8 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14224</a></td>
-                            <td>125416</td>
+                            <td><a href="carga_todos.html">214224</a></td>
+                            <td>BHJY-16</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>05 PARQUE ARAUCO</td>
                             <td>05/01/17 10:14:59-Z</td>
@@ -163,8 +163,8 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14225</a></td>
-                            <td>125417</td>
+                            <td><a href="carga_todos.html">214225</a></td>
+                            <td>CCGH-24</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>12 MALL PLAZA NORTE</td>
                             <td>05/01/17 09:04:59-Z</td>
