--- a/views/solicitud_express.html
+++ b/views/solicitud_express.html
@@ -125,7 +125,12 @@
                                 <input type="text" class="form-control" placeholder="5500" disabled/>
                             </div>
                         </div>
-
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Observación</label>
+                            <div class="col-md-9">
+                                <textarea class="form-control" placeholder="Indique aqui la obervación" rows="5" disabled></textarea>
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-9">
