--- a/views/solicitud_programada.html
+++ b/views/solicitud_programada.html
@@ -129,7 +129,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-9">
-                                <button type="submit" class="btn btn-sm btn-success">Guardar</button>
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="NRO">Guardar</button>
                                 <button type="submit" class="btn btn-sm btn-info">Cancelar</button>
                             </div>
                         </div>
