--- a/views/b2b_despacho.html
+++ b/views/b2b_despacho.html
@@ -92,68 +92,75 @@
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>N° Viaje</th>
-                            <th>Tipo de Viaje</th>
+                            <th>N° Despacho</th>
+                            <th>Proveedor</th>
+                            <th>Tipo de Camión</th>
                             <th>Origen</th>
                             <th>Destino</th>
-                            <th>Fecha Presentación</th>
                             <th>Estado</th>
+                            <th>Tarifa</th>
                             <th>Seleccionar</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">214222</a></td>.
-                            <td>TRONCAL</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
-                            <td>12/12/16 14:00</td>
                             <td>CERRADO</td>
+                            <td>360,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">214222</a></td>
-                            <td>TRONCAL</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>41 TALCA</td>
-                            <td>12/12/16 15:00</td>
+                            <td>17 TI-TALCA</td>
                             <td>CERRADO</td>
+                            <td>490,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">214223</a></td>
-                            <td>TRONCAL</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>14 ANTOFAGASTA</td>
-                            <td>12/12/16 15:00</td>
+                            <td>15 ARICA</td>
                             <td>CERRADO</td>
+                            <td>550,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">214223</a></td>
-                            <td>UM</td>
-                            <td>00 CT - ANTOFAGASTA</td>
-                            <td>99 CLIENTE</td>
-                            <td>12/12/16 15:00</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>14 PUERTO MONTT</td>
                             <td>CERRADO</td>
+                            <td>680,000</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">214224</a></td>
-                            <td>DDC</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>955 ZONA 9</td>
-                            <td>05/01/17 10:00</td>
+                            <td>36 ANTOFAGASTA</td>
                             <td>CERRADO</td>
+                            <td>705,000</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">214225</a></td>
-                            <td>TRONCAL</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>12 MALL PLAZA NORTE</td>
-                            <td>05/01/17 09:00</td>
+                            <td>19 LA FLORIDA</td>
                             <td>CERRADO</td>
+                            <td>90500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         </tbody>
