--- a/views/Gestion/Validaciones/itinerario.html
+++ b/views/Gestion/Validaciones/itinerario.html
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="panel-body">
-                        <embed src="iti.pdf" type="application/pdf">
+                        <embed src="views/Gestion/Validaciones/iti.pdf" type="application/pdf">
                         </embed>
                     </div>
                 </div>
