--- a/views/Gestion/Validaciones/itinerario.html
+++ b/views/Gestion/Validaciones/itinerario.html
@@ -4,11 +4,11 @@
         <li><a href="javascript:;">Home</a></li>
         <li><a href="javascript:;">Gestión</a></li>
         <li><a href="javascript:;">Validaciones</a></li>
-        <li class="active">30501 - Salida</li>
+        <li class="active">30502 - Itinerario</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Validaciones de Salida <small>Gestión de Viajes</small></h1>
+    <h1 class="page-header">Itinerario de Viaje <small>Gestión de Viajes</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
