--- a/views/Gestion/Viaje/editar.html
+++ b/views/Gestion/Viaje/editar.html
@@ -181,7 +181,7 @@
                     </div>
                     <div class="col-md-5">
                         <p>
-                            <button class="btn btn-success " >Editar Viaje</button>
+                            <button class="btn btn-success " ng-click="PRO_EDIT_MANF()">Editar Viaje</button>
                             <button class="btn btn-info " >Cancelar</button>
                         </p>
                     </div>
