--- a/views/Gestion/Sello/ingreso.html
+++ b/views/Gestion/Sello/ingreso.html
@@ -37,17 +37,14 @@
                             <div class="col-md-1">
                                 <input type="text" class="form-control" placeholder="200109" ng-model="monet_id"  />
                             </div>
-                            <label class="col-md-2 control-label">Numero Sello</label>
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="23455" ng-model="monet_id"  />
-                            </div>
+
                         </div>
 
 
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-9">
-                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Hacer Ingreso</button>
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Buscar</button>
                             </div>
                         </div>
                     </form>
@@ -79,6 +76,22 @@
                         </tr>
                         </tbody>
                     </table>
+                    <div class="panel-body">
+                        <form class="form-horizontal">
+                            <div class="form-group">
+                                <label class="col-md-2 control-label">Numero Sello</label>
+                                <div class="col-md-3">
+                                    <input type="text" class="form-control" placeholder="23455" ng-model="monet_id"  />
+                                </div>
+                                </div>
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">Enviar</label>
+                                <div class="col-md-9">
+                                    <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Buscar</button>
+                                </div>
+                            </div>
+                            </form>
+                        </div>
                     <table id="data-table2" class="table table-striped table-bordered">
                         <thead>
                         <tr>
