--- a/views/Gestion/Sello/ingreso.html
+++ b/views/Gestion/Sello/ingreso.html
@@ -44,7 +44,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-9">
-                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Buscar</button>
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="PRO_CONS_PAT()">Buscar</button>
                             </div>
                         </div>
                     </form>
@@ -87,7 +87,7 @@
                             <div class="form-group">
                                 <label class="col-md-3 control-label">Enviar</label>
                                 <div class="col-md-9">
-                                    <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Buscar</button>
+                                    <button type="submit" class="btn btn-sm btn-success" ng-click="PRO_AGR_SELL()">Hacer Ingreso</button>
                                 </div>
                             </div>
                             </form>
