--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -227,7 +227,14 @@
                     <li class="has-sub" ng-class="{active:$state.includes('app.b2b.transportista')}">
                         <a href="javascript:;"><b class="caret pull-right"></b> Transportista</a>
                         <ul class="sub-menu">
-                            <li ui-sref-active="active"><a ui-sref="app.b2b.transportista.aceptar">Solicitudes Publicadas</a></li>
+                            <li class="has-sub" ng-class="{active:$state.includes('app.b2b.transportista.solicitud')}">
+                                <a href="javascript:;"><b class="caret pull-right"></b>Solicitud</a>
+                                <ul class="sub-menu">
+                                    <li ui-sref-active="active"><a ui-sref="app.b2b.transportista.solicitud.aceptar">Aceptar Solicitud</a></li>
+                                    <li ui-sref-active="active"><a ui-sref="app.b2b.transportista.solicitud.detalle">Detalle Solicitud</a></li>
+                                </ul>
+                            </li>
+
                             <li ui-sref-active="active"><a ui-sref="app.b2b.transportista.despacho">Revisa Viaje</a></li>
                             <li ui-sref-active="active"><a ui-sref="app.b2b.transportista.oc">Ordenes de Facturación</a></li>
                             <li ui-sref-active="active"><a ui-sref="app.b2b.transportista.factura">Facturas</a></li>
