--- a/views/Gestion/Solicitud/express.html
+++ b/views/Gestion/Solicitud/express.html
@@ -91,7 +91,11 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Patente</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="BBCV-69" />
+                                <select class="form-control">
+                                    <option>BBBB-01</option>
+                                    <option>CM-5023</option>
+
+                                </select>
                             </div>
                         </div>
 
