--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -163,12 +163,20 @@
 
                         </ul>
                     </li>
+
                     <li class="has-sub" ng-class="{active:$state.includes('app.gestion.validaciones')}">
                     <a href="javascript:;"><b class="caret pull-right"></b>Validaciones</a>
                     <ul class="sub-menu">
                         <li ui-sref-active="active"><a ui-sref="app.gestion.validaciones.salida">Salida</a></li>
                         <li ui-sref-active="active"><a ui-sref="app.gestion.validaciones.itinerario">Itinerario</a></li>
                     </ul>
+                    </li>
+                    <li class="has-sub" ng-class="{active:$state.includes('app.gestion.manifiestos')}">
+                        <a href="javascript:;"><b class="caret pull-right"></b>Manifiestos de carga</a>
+                        <ul class="sub-menu">
+                            <li ui-sref-active="active"><a ui-sref="app.gestion.manifiestos.cerrar">Cerrar MC</a></li>
+
+                        </ul>
                     </li>
                     <li class="has-sub" ng-class="{active:$state.includes('app.gestion.viaje')}">
                         <a href="javascript:;"><b class="caret pull-right"></b>Viaje</a>
