--- a/views/Gestion/Solicitud/programada.html
+++ b/views/Gestion/Solicitud/programada.html
@@ -51,7 +51,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Origen</label>
                             <div class="col-md-9">
-                                <select class="form-control">
+                                <select class="form-control" disabled>
                                     <option>00 CD Centro de Distribución</option>
                                     <option>01 CTT Centro de Transferencia SCL</option>
                                     <option>Otro</option>
@@ -104,29 +104,9 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Tarifa Especial</label>
-                            <div class="col-md-9">
-                                <label class="checkbox-inline">
-                                    <input type="checkbox" value="" />
-                                    SI/NO
-                                </label>
 
-                            </div>
-                        </div>
 
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Valor Tarifa</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="5500" disabled/>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Observación</label>
-                            <div class="col-md-9">
-                                <textarea class="form-control" placeholder="Indique aqui la obervación" rows="5" disabled></textarea>
-                            </div>
-                        </div>
+
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-9">
