--- a/views/Gestion/Solicitud/express.html
+++ b/views/Gestion/Solicitud/express.html
@@ -49,6 +49,14 @@
                             </div>
                         </div>
                         <div class="form-group">
+                        <label class="col-md-3 control-label"> M3 </label>
+                        <div class="col-md-3">
+                            <input type="text" class="form-control" placeholder="15" ng-model="prov_razon_social" disabled/>
+                        </div>
+
+                    </div>
+
+                        <div class="form-group">
                             <label class="col-md-3 control-label">Origen</label>
                             <div class="col-md-9">
                                 <select class="form-control">
