--- a/views/Gestion/Solicitud/enpatio.html
+++ b/views/Gestion/Solicitud/enpatio.html
@@ -1,4 +1,4 @@
-div ng-controller="tablaManifiestoDefaultController">
+<div ng-controller="30204_Controller">
 <!-- begin breadcrumb -->
 <ol class="breadcrumb pull-right">
     <li><a href="javascript:;">Home</a></li>
@@ -8,7 +8,7 @@ div ng-controller="tablaManifiestoDefaultController">
 </ol>
 <!-- end breadcrumb -->
 <!-- begin page-header -->
-<h1 class="page-header">Solicitud Express - Flota Esperando en Patio<small>Gestión de Viajes</small></h1>
+<h1 class="page-header">Solicitud Express - Flota Esperando en Patio<small> Gestión de Viajes</small></h1>
 <!-- end page-header -->
 
 <!-- begin row -->
