--- a/views/Gestion/Solicitud/express.html
+++ b/views/Gestion/Solicitud/express.html
@@ -59,7 +59,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Origen</label>
                             <div class="col-md-9">
-                                <select class="form-control">
+                                <select class="form-control" disabled>
                                     <option>00 CD Centro de Distribución</option>
                                     <option>01 CTT Centro de Transferencia SCL</option>
                                     <option>Otro</option>
@@ -79,7 +79,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Transportista</label>
                             <div class="col-md-9">
-                                <select class="form-control">
+                                <select class="form-control" disabled>
                                     <option>Transportes Pacifico</option>
                                     <option>Tur Bus</option>
                                     <option>Otro</option>
@@ -89,7 +89,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Tipo de Vehiculo</label>
                             <div class="col-md-9">
-                                <select class="form-control">
+                                <select class="form-control" disabled>
                                     <option>CM40 - 40 Metros Cubicos</option>
                                     <option>CM50 - 50 Metros Cubicos</option>
                                     <option>Otro</option>
@@ -99,7 +99,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Patente</label>
                             <div class="col-md-9">
-                                <select class="form-control">
+                                <select class="form-control" disabled>
                                     <option>BBBB-01</option>
                                     <option>CM-5023</option>
 
