--- a/views/Gestion/Solicitud/express.html
+++ b/views/Gestion/Solicitud/express.html
@@ -1,4 +1,4 @@
-<div ng-controller="expressDespachoController">
+<div ng-controller="30201_Controller">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a ui-sref="app.dashboard">Home</a></li>
@@ -147,8 +147,8 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-9">
-                                <button type="submit" class="btn btn-sm btn-success" ng-click="NRO">Guardar</button>
-                                <button type="submit" class="btn btn-sm btn-info">Cancelar</button>
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="PRO_CARGA_SOLI()">Guardar</button>
+                                <button type="submit" class="btn btn-sm btn-info" ng-click="PRO_CANC()">Cancelar</button>
                             </div>
                         </div>
                     </form>
