--- a/views/Gestion/Planificacion/historica.html
+++ b/views/Gestion/Planificacion/historica.html
@@ -28,26 +28,26 @@
                 </div>
 
                 <div class="panel-body">
-                    <div class="form-group">
-                    <label class="control-label col-md-4">Default Date Time</label>
-                    <div class="col-md-8">
-                        <div class="input-group date" id="datetimepicker1">
-                            <input type="text" class="form-control" />
-                            <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"></span>
-                                    </span>
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Default Date Time</label>
+                            <div class="col-md-8">
+                                <div class="input-group date" id="datetimepicker1">
+                                    <input type="text" class="form-control" />
+                                    <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-calendar"></span>
+                                            </span>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                    </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Acciones:</label>
                             <div class="col-md-9">
                                 <button type="submit" class="btn btn-sm btn-success">Buscar</button>
                             </div>
                         </div>
-                    </form>
-                </div>
+                      </form>
+                    </div>
 
             </div>
             <!-- end panel -->
